examples/failing/NullaryAbs.purs
-- @shouldFailWith ErrorParsingModule
module Main where

import Prelude

func = \ -> "no"
